--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -1,32 +1,48 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Usuário</title>
-    <link rel="stylesheet" href="estilos.css">
+    <title>Cadastro - Music Makers</title>
+
+    <link rel="stylesheet" href="/frontend/estilos.css"> 
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Criar Conta</h1>
-        <form id="cadastroForm">
-            <div class="form-group">
-                <label for="nome">Nome Completo</label>
-                <input type="text" id="nome" name="nome" required>
+    <div class="loginBox" id="cadastroStep">
+        <h2>Criar Conta</h2>
+        <form id="formCadastro">
+            <div class="inputBox">
+                <input type="text" id="nome" required>
+                <label>Nome Completo</label>
             </div>
-            <div class="form-group">
-                <label for="email">E-mail</label>
-                <input type="email" id="email" name="email" required>
+            <div class="inputBox">
+                <input type="email" id="email" required>
+                <label>E-mail</label>
             </div>
-            <div class="form-group">
-                <label for="senha">Senha</label>
-                <input type="password" id="senha" name="senha" required>
+            <div class="inputBox">
+                <input type="password" id="senha" required>
+                <label>Senha</label>
+                <i class="bi bi-eye-slash" id="toggleSenha"></i>
             </div>
-            <button type="submit" class="btn">Cadastrar</button>
+            <div class="inputBox">
+                <input type="password" id="confirmarSenha" required>
+                <label>Confirmar Senha</label>
+                <i class="bi bi-eye-slash" id="toggleConfirmarSenha"></i>
+            </div>
+
+            <button type="submit" class="btnLoginSubmit">Cadastrar</button>
+
+            <div class="mensagem-erro" id="mensagemErroCadastro"></div>
         </form>
-        <p>Já tem uma conta? <a href="login.html">Faça login</a></p>
+
+        <div class="registerLink">
+            <p>Já tem uma conta? <a href="login.html">Login</a></p>
+        </div>
     </div>
 
-    <script src="cadastro.js"></script> 
+    <script src="/frontend/cadastro.js"></script>
+    <script src="/frontend/utils.js"></script>
 </body>
 </html>
