--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -5,32 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro - Music Makers</title>
 
-    <link rel="stylesheet" href="/frontend/estilos.css"> 
-
+    <link rel="stylesheet" href="estilos.css"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
-<body>
+<body class="auth-page-body"> 
     <div class="loginBox" id="cadastroStep">
         <h2>Criar Conta</h2>
         <form id="formCadastro">
-            <div class="inputBox">
+            <div class="inputGroup">
                 <input type="text" id="nome" required>
                 <label>Nome Completo</label>
             </div>
-            <div class="inputBox">
+            <div class="inputGroup">
                 <input type="email" id="email" required>
                 <label>E-mail</label>
             </div>
-            <div class="inputBox">
+            <div class="inputGroup">
                 <input type="password" id="senha" required>
                 <label>Senha</label>
-                <i class="bi bi-eye-slash" id="toggleSenha"></i>
-            </div>
-            <div class="inputBox">
+                </div>
+            <div class="inputGroup">
                 <input type="password" id="confirmarSenha" required>
                 <label>Confirmar Senha</label>
-                <i class="bi bi-eye-slash" id="toggleConfirmarSenha"></i>
-            </div>
+                </div>
 
             <button type="submit" class="btnLoginSubmit">Cadastrar</button>
 
@@ -42,7 +39,7 @@
         </div>
     </div>
 
-    <script src="/frontend/cadastro.js"></script>
-    <script src="/frontend/utils.js"></script>
+    <script src="cadastro.js"></script>
+    <script src="utils.js"></script>
 </body>
 </html>
