--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Makers - Conectando Músicos Independentes</title>
+    <title>Music Makers - A gestão completa para sua banda</title>
     <link rel="stylesheet" href="estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,9 +17,9 @@
             <h1 class="logo">Music Makers</h1>
             <nav class="menuPrincipal">
                 <ul>
-                    <li><a href="#conectar">Encontrar Músicos</a></li>
-                    <li><a href="#marketplace">Marketplace</a></li>
-                    <li><a href="#conteudo">Conteúdo</a></li>
+                    <li><a href="#agenda">Agenda</a></li>
+                    <li><a href="#financeiro">Financeiro</a></li>
+                    <li><a href="#shows">Shows</a></li>
                     <li><a href="login.html" class="btnLogin">Login</a></li>
                 </ul>
             </nav>
@@ -29,29 +29,29 @@
     <main class="hero">
         <div class="container">
             <div class="heroTexto">
-                <h2>A sua próxima banda começa aqui.</h2>
-                <p>Encontre parceiros, compre e venda equipamentos e impulsione sua carreira musical em uma única plataforma.</p>
-                <a href="cadastro.html" class="btnCta">Crie sua banda agora</a>
+                <h2>A gestão completa para sua banda.</h2>
+                <p>Organize seus ensaios, gerencie suas finanças e planeje seus shows em um só lugar.</p>
+                <a href="cadastro.html" class="btnCta">Gerencie sua banda agora</a>
             </div>
         </div>
     </main>
 
     <section class="modulos">
         <div class="container">
-            <div class="modulo" id="conectar">
-                <i class="fas fa-users"></i>
-                <h3>Conecte-se e Colabore</h3>
-                <p>Crie seu perfil, mostre seu talento com áudios e vídeos e encontre músicos com estilos compatíveis para formar a banda dos seus sonhos.</p>
+            <div class="modulo" id="agenda">
+                <i class="fas fa-calendar-alt"></i>
+                <h3>Agenda de Ensaios</h3>
+                <p>Marque ensaios, defina repertórios e notifique todos os membros da banda.</p>
             </div>
-            <div class="modulo" id="marketplace">
-                <i class="fas fa-store"></i>
-                <h3>Marketplace Especializado</h3>
-                <p>Anuncie, venda ou compre instrumentos, amplificadores e acessórios em um ambiente seguro e exclusivo para a comunidade musical.</p>
+            <div class="modulo" id="financeiro">
+                <i class="fas fa-dollar-sign"></i>
+                <h3>Controle Financeiro</h3>
+                <p>Registre os cachês, despesas e lucros da banda de forma simples e transparente.</p>
             </div>
-            <div class="modulo" id="conteudo">
-                 <i class="fas fa-book-open"></i>
-                <h3>Conteúdo e Serviços</h3>
-                <p>Acesse dicas de produção, tutoriais e encontre estúdios, produtores e professores para elevar o nível da sua música.</p>
+            <div class="modulo" id="shows">
+                 <i class="fas fa-guitar"></i>
+                <h3>Gestão de Shows</h3>
+                <p>Cadastre seus próximos shows, controle a venda de ingressos e organize a logística.</p>
             </div>
         </div>
     </section>
@@ -59,7 +59,7 @@
     <footer class="rodape">
         <div class="container">
             <p>&copy; 2025 Music Makers - Todos os direitos reservados.</p>
-            <p>Uma plataforma de conexão para músicos independentes.</p>
+            <p>A plataforma completa para a gestão da sua banda.</p>
         </div>
     </footer>
 
