--- a/frontend/banda.html
+++ b/frontend/banda.html
@@ -1,131 +1,315 @@
 <!DOCTYPE html>
+
 <html lang="pt-BR">
+
 <head>
+
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Gestão da Banda - Music Makers</title>
+
     <link rel="stylesheet" href="estilos.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </head>
+
 <body>
 
+
+
     <header class="cabecalho">
+
         <div class="container">
+
             <h1 class="logo"><a href="dashboard.html" style="color: var(--cor-secundaria); text-decoration: none;">Music Makers</a></h1>
+
             <nav class="menuPrincipal">
+
                 <ul>
+
                     </ul>
+
             </nav>
+
         </div>
+
     </header>
 
+
+
     <main class="banda-container">
+
         <div class="container">
+
             <h1>Gerenciamento da Banda</h1>
-            
+
+           
+
             <div class="banda-tabs">
+
                 <button class="tab-link ativo" data-tab="agenda">Agenda</button>
+
                 <button class="tab-link" data-tab="financeiro">Financeiro</button>
+
                 <button class="tab-link" data-tab="membros">Membros</button>
+
                 <button class="tab-link" data-tab="repertorio">Repertório</button>
+
             </div>
+
+
 
             <div id="agenda" class="tab-content ativo">
-                <h2>Agenda e Eventos</h2>
-                <p>Aqui você verá um calendário completo com ensaios, shows e outros compromissos da banda.</p>
+
+                <div class="content-header">
+
+                    <h2>Próximos Eventos</h2>
+
+                    <button id="abrirModalEventoBtn" class="btn-adicionar-principal"><i class="fas fa-calendar-plus"></i> Novo Evento</button>
+
+                </div>
+
+                <div id="agendaList" class="agenda-list"></div>
+
             </div>
+
+
 
             <div id="financeiro" class="tab-content">
-                <h2>Controle Financeiro</h2>
-                <div class="financeiro-grid">
-                    <div class="grafico-container">
-                        <h3>Balanço Mensal (Receitas x Despesas)</h3>
-                        <canvas id="graficoFinanceiro"></canvas>
-                    </div>
-                    <div class="tabela-container">
-                        <h3>Últimas Transações</h3>
-                        <table class="tabela-financeira">
-                            <thead>
-                                <tr>
-                                    <th>Data</th>
-                                    <th>Descrição</th>
-                                    <th>Valor</th>
-                                </tr>
-                            </thead>
-                            <tbody id="corpoTabelaFinanceira"></tbody>
-                        </table>
-                    </div>
+
+                <div class="content-header">
+
+                    <h2>Painel Financeiro</h2>
+
+                    <button id="abrirModalTransacaoBtn" class="btn-adicionar-principal"><i class="fas fa-plus"></i> Nova Transação</button>
+
                 </div>
+
+                <div class="metricas-grid">
+
+                    <div class="metrica-card"><h4><i class="fas fa-wallet"></i> Saldo Atual</h4><p id="saldoAtual">R$ 0,00</p></div>
+
+                    <div class="metrica-card receita"><h4><i class="fas fa-arrow-up"></i> Receita do Mês</h4><p id="receitaMes">R$ 0,00</p></div>
+
+                    <div class="metrica-card despesa"><h4><i class="fas fa-arrow-down"></i> Despesa do Mês</h4><p id="despesaMes">R$ 0,00</p></div>
+
+                </div>
+
+                <div class="financeiro-main-grid">
+
+                    <div class="card-style">
+
+                        <h3>Histórico de Transações</h3>
+
+                        <div class="table-wrapper">
+
+                            <table class="tabela-moderna">
+
+                                <thead><tr><th>Data</th><th>Descrição</th><th>Categoria</th><th>Valor</th></tr></thead>
+
+                                <tbody id="corpoTabelaFinanceira"></tbody>
+
+                            </table>
+
+                        </div>
+
+                    </div>
+
+                    <div class="analysis-column">
+
+                        <div class="card-style ai-insights-card">
+
+                            <h3><i class="fas fa-robot"></i> Análise da IA</h3>
+
+                            <div id="aiInsightsContent" class="ai-insights-content"><p class="loading-ai">Analisando...</p></div>
+
+                        </div>
+
+                        <div class="card-style">
+
+                            <h3>Despesas por Categoria</h3>
+
+                            <div class="chart-container"><canvas id="graficoCategorias"></canvas></div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
             </div>
+
+
 
             <div id="membros" class="tab-content">
-                <h2>Membros da Banda</h2>
-                <div class="membros-grid">
-                    <div class="tabela-container">
-                        <h3>Integrantes Atuais</h3>
-                        <table class="tabela-membros">
-                            <thead>
-                                <tr>
-                                    <th>Nome</th>
-                                    <th>Instrumento</th>
-                                    <th>Ação</th>
-                                </tr>
-                            </thead>
-                            <tbody id="corpoTabelaMembros"></tbody>
-                        </table>
-                    </div>
-                    <div class="form-container">
-                        <h3>Adicionar Novo Membro</h3>
-                        <form id="formAdicionarMembro">
-                            <div class="inputGroup">
-                                <label for="nomeMembro">Nome do Músico</label>
-                                <input type="text" id="nomeMembro" required>
-                            </div>
-                            <div class="inputGroup">
-                                <label for="instrumentoMembro">Instrumento</label>
-                                <input type="text" id="instrumentoMembro" required>
-                            </div>
-                            <button type="submit" class="btn-adicionar">Adicionar</button>
-                        </form>
-                    </div>
+
+                <div class="content-header">
+
+                    <h2>Integrantes Atuais</h2>
+
+                    <button id="abrirModalMembroBtn" class="btn-adicionar-principal"><i class="fas fa-plus"></i> Adicionar Membro</button>
+
                 </div>
+
+                <div class="card-style">
+
+                    <div class="table-wrapper">
+
+                        <table class="tabela-moderna">
+
+                            <thead><tr><th>Nome</th><th>Instrumento</th><th>Ação</th></tr></thead>
+
+                            <tbody id="corpoTabelaMembros"></tbody>
+
+                        </table>
+
+                    </div>
+
+                </div>
+
             </div>
+
+
 
             <div id="repertorio" class="tab-content">
-                <h2>Repertório e Partituras</h2>
+
+                <div class="content-header"><h2>Repertório e Partituras</h2></div>
+
                 <div class="repertorio-grid">
-                    <div class="tabela-container">
+
+                    <div class="card-style">
+
                         <h3>Músicas</h3>
-                        <table class="tabela-repertorio">
-                            <thead>
-                                <tr>
-                                    <th>Música</th>
-                                    <th>Origem</th>
-                                    <th>Ação</th>
-                                </tr>
-                            </thead>
-                            <tbody id="corpoTabelaRepertorio"></tbody>
-                        </table>
-                    </div>
-                    <div class="partitura-container">
-                        <h3>Visualizador de Partitura</h3>
-                        <div id="visualizadorPdf">
-                            <p>Selecione uma música na lista para ver a partitura.</p>
+
+                        <div class="table-wrapper">
+
+                            <table class="tabela-moderna">
+
+                                <thead><tr><th>Música</th><th>Origem</th><th>Ação</th></tr></thead>
+
+                                <tbody id="corpoTabelaRepertorio"></tbody>
+
+                            </table>
+
                         </div>
+
                     </div>
+
+                    <div class="card-style">
+
+                        <h3>Visualizador de Partitura</h3>
+
+                        <div id="visualizadorPdf"><p>Selecione uma música para ver a partitura.</p></div>
+
+                    </div>
+
                 </div>
+
             </div>
+
         </div>
+
     </main>
 
-    <footer class="rodape">
-        <div class="container">
-            <p>&copy; 2025 Music Makers.</p>
+
+
+    <div id="membroModal" class="modal">
+
+        <div class="modal-content">
+
+            <span class="close-button">&times;</span>
+
+            <h3>Adicionar Novo Membro</h3>
+
+            <form id="formAdicionarMembro">
+
+                <div class="inputGroup"><label for="nomeMembro">Nome</label><input type="text" id="nomeMembro" name="nomeMembro" required></div>
+
+                <div class="inputGroup"><label for="instrumentoMembro">Instrumento</label><input type="text" id="instrumentoMembro" name="instrumentoMembro" required></div>
+
+                <button type="submit" class="btn-adicionar">Salvar</button>
+
+            </form>
+
         </div>
-    </footer>
+
+    </div>
+
+
+
+    <div id="eventoModal" class="modal">
+
+        <div class="modal-content">
+
+            <span class="close-button">&times;</span>
+
+            <h3>Adicionar Novo Evento</h3>
+
+            <form id="formAdicionarEvento">
+
+                <div class="inputGroup"><label for="tituloEvento">Título</label><input type="text" id="tituloEvento" name="tituloEvento" required></div>
+
+                <div class="inputGroup"><label for="dataEvento">Data</label><input type="date" id="dataEvento" name="dataEvento" required></div>
+
+                <div class="inputGroup"><label for="localEvento">Local</label><input type="text" id="localEvento" name="localEvento" required></div>
+
+                <div class="inputGroup"><label for="tipoEvento">Tipo</label><select id="tipoEvento" name="tipoEvento" required><option value="ensaio">Ensaio</option><option value="show">Show</option><option value="gravacao">Gravação</option></select></div>
+
+                <button type="submit" class="btn-adicionar">Salvar Evento</button>
+
+            </form>
+
+        </div>
+
+    </div>
+
+
+
+    <div id="transacaoModal" class="modal">
+
+        <div class="modal-content">
+
+            <span class="close-button">&times;</span>
+
+            <h3>Nova Transação</h3>
+
+            <form id="formAdicionarTransacao">
+
+                <div class="inputGroup"><label>Tipo</label><div class="tipo-transacao-group"><input type="radio" id="tipoReceita" name="tipo" value="RECEITA" checked><label for="tipoReceita">Receita</label><input type="radio" id="tipoDespesa" name="tipo" value="DESPESA"><label for="tipoDespesa">Despesa</label></div></div>
+
+                <div class="inputGroup"><label for="descricaoTransacao">Descrição</label><input type="text" id="descricaoTransacao" name="descricao" required></div>
+
+                <div class="inputGroup"><label for="valorTransacao">Valor</label><input type="number" step="0.01" id="valorTransacao" name="valor" required></div>
+
+                <div class="inputGroup"><label for="dataTransacao">Data</label><input type="date" id="dataTransacao" name="data" required></div>
+
+                <div class="inputGroup"><label for="categoriaTransacao">Categoria</label><select id="categoriaTransacao" name="categoria" required><option value="Show">Show</option><option value="Merchandising">Merchandising</option><option value="Transporte">Transporte</option><option value="Equipamento">Equipamento</option><option value="Estúdio">Estúdio</option><option value="Outros">Outros</option></select></div>
+
+                <button type="submit" class="btn-adicionar">Salvar Transação</button>
+
+            </form>
+
+        </div>
+
+    </div>
+
+
+
+    <footer class="rodape"><div class="container"><p>&copy; 2025 Music Makers.</p></div></footer>
+
+    <div id="snackbar"></div>
+
+
 
     <script src="global.js"></script>
+
     <script src="banda.js"></script>
+
 </body>
+
 </html>
