feat: allow skipping login to load dashboard

--- a/mobile/music-makers-android/app/src/main/assets/index.html
+++ b/mobile/music-makers-android/app/src/main/assets/index.html
@@ -101,6 +101,7 @@
     </div>
 </footer>
 
+<script src="config.js"></script>
 <script src="global.js"></script>
 
 <script type="text/javascript">
