--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -62,6 +62,7 @@
         </div>
     </footer>
 
+    <script src="config.js"></script>
     <script src="global.js"></script>
     <script src="dashboard.js"></script> 
 </body>
