--- a/mobile/music-makers-android/app/src/main/assets/dashboard.html
+++ b/mobile/music-makers-android/app/src/main/assets/dashboard.html
@@ -62,6 +62,7 @@
         </div>
     </footer>
 
+    <script src="config.js"></script>
     <script src="global.js"></script>
     <script src="dashboard.js"></script> 
 </body>
